--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -48,3 +48,150 @@
     gap: 16px;
     visibility: visible;
   }
+  .section1 {
+    width: 96.4%;
+    height: auto;
+    background: #ffc3a0;
+    display: flex;
+    align-items: center;
+    padding: 24px 26px;
+    flex-direction: row;
+    justify-content: center;
+    gap: 48px;
+  }
+  .div1 {
+    display: flex;
+    align-items: flex-start;
+    padding: 77px 18px 45px 0px;
+    flex-direction: column;
+    justify-content: flex-end;
+    gap: 21px;
+  }
+  
+  
+  .P1 {
+    width: 444px;
+    height: auto;
+    margin-top: 10px;
+    color: #000;
+    font-family: "Roboto";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28.008px; /* 155.6% */
+  }
+  .img1 {
+    width: 898px;
+    height: 564px;
+    flex-shrink: 0;
+    border-radius: 20px;
+  }
+  .H1 {
+    width: 85%;
+    color: #000;
+    font-family: Roboto;
+    font-size: 78px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 90px; /* 115.385% */
+  }
+  .button1 {
+    width: 310px;
+    height: 59px;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34.002px; /* 154.553% */
+    border-radius: 35px;
+    border: 1px solid #000;
+    background: none;
+  }
+  .section2 {
+    width: 97.8%;
+    height: auto;
+    background: #f5ede7;
+    padding: 80px 16px;
+    gap: 63px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .p2 {
+    width: 250px;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 43px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 60.01px; /* 139.559% */
+  }
+  .div2 {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+  }
+  .img2 {
+    max-width: 334px;
+    height: auto;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+  .H2 {
+    width: 117px;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35.996px; /* 133.32% */
+    text-transform: uppercase;
+  }
+  .H2_2 {
+    width: 200px;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 27px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35.996px; /* 133.32% */
+    text-transform: uppercase;
+  }
+  .p2_2 {
+    width: 320px;
+    color: #000;
+    text-align: center;
+    font-family: "DM Sans";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28.008px; /* 155.6% */
+  }
+  .button2 {
+    width: 310px;
+    height: 59px;
+    color: #0126de;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34.002px; /* 154.553% */
+    border-radius: 35px;
+    border: 1px solid #0126de;
+    background: none;
+  }
