--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -48,6 +48,90 @@
     gap: 16px;
     visibility: visible;
   }
+  .hamburger-menu {
+    visibility: hidden;
+  }
+  
+  /* скрываем чекбокс */
+  #menu__toggle {
+    opacity: 0;
+  }
+  /* стилизуем кнопку */
+  .menu__btn {
+    display: flex; /* используем flex для центрирования содержимого */
+    align-items: center; /* центрируем содержимое кнопки */
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  /* добавляем "гамбургер" */
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000000;
+  }
+  .menu__btn > span::before {
+    content: "";
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: "";
+    top: 8px;
+  }
+  /* контейнер меню */
+  .menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    right: -100%;
+    /*left: -100%;*/
+    width: 250px;
+    height: 12%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #fcf2e9;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+  }
+  /* элементы меню */
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+  .menu__item:hover {
+    background-color: #cfd8dc;
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+  }
   .section1 {
     width: 96.4%;
     height: auto;
@@ -196,7 +280,7 @@
     background: none;
   }
   .section3 {
-    width: 97.8%;
+    width: 100%;
     height: auto;
     background: #f5ede7;
     padding: 49px 1px;
@@ -278,4 +362,43 @@
     font-weight: 400;
     line-height: 27.997px; /* 139.986% */
     text-transform: uppercase;
+  }
+  .button4 {
+    width: 257px;
+    height: 58px;
+    flex-shrink: 0;
+    border-radius: 35px;
+    border: 1px solid #0126de;
+    color: #0126de;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34.002px; /* 154.553% */
+  }
+  .button4unvisible {
+    display: none;
+    width: 310px;
+    height: 59px;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 34.002px; /* 154.553% */
+    border-radius: 35px;
+    border: 1px solid #000;
+    background: none;
+    margin-top: 40px;
+  }
+  .H4 {
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 39px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 56.023px; /* 143.649% */
   }
