--- a/Tarla/aboutUs.css
+++ b/Tarla/aboutUs.css
@@ -77,7 +77,8 @@
   justify-content: center;
   flex-wrap: wrap;
 }
-.paragraph, .paragraph2 {
+.paragraph,
+.paragraph2 {
   width: 75%;
   height: 98%;
   display: flex;
@@ -93,24 +94,23 @@
   gap: 26px;
   justify-content: center;
 }
-.textP{
+.textP {
   color: #000;
-font-family: Roboto;
-font-size: 26px;
-font-style: normal;
-font-weight: 400;
-line-height: 40.005px; /* 153.865% */
+  font-family: Roboto;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40.005px; /* 153.865% */
 }
 
-
-.textH1{
+.textH1 {
   color: #000;
-font-family: "DM Sans";
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 24.003px; /* 150.019% */
-text-transform: uppercase;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
 }
 .footer {
   width: 98%;
@@ -119,7 +119,7 @@ text-transform: uppercase;
   justify-content: center;
   align-items: center;
   flex-direction: column;
- /* gap: 170px;*/
+  /* gap: 170px;*/
   padding: 105px 17px 0px 15px;
   flex-wrap: wrap;
 }
@@ -149,14 +149,14 @@ text-transform: uppercase;
   line-height: 24.003px; /* 150.019% */
   text-transform: uppercase;
 }
-@media screen and (max-width: 1160px){
-  .paragraph{
+@media screen and (max-width: 1160px) {
+  .paragraph {
     flex-direction: column;
   }
- .paragraph2{
+  .paragraph2 {
     flex-direction: column-reverse;
   }
-  .img{
+  .img {
     width: 100%;
     height: auto;
     object-fit: contain;
