--- a/NotAuthorized/style.css
+++ b/NotAuthorized/style.css
@@ -158,17 +158,7 @@ background: #261d18;
   justify-content: center;
   gap: 48px;
 }
-.section1dark {
-  width: 96.4%;
-  height: auto;
-  background: #261d18;
-  display: flex;
-  align-items: center;
-  padding: 24px 26px;
-  flex-direction: row;
-  justify-content: center;
-  gap: 48px;
-}
+
 .div1 {
   display: flex;
   align-items: flex-start;
@@ -189,17 +179,6 @@ background: #261d18;
   font-weight: 400;
   line-height: 28.008px; /* 155.6% */
 }
-.P1dark {
-  width: 444px;
-  height: auto;
-  margin-top: 10px;
-  font-family: "Roboto";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28.008px; /* 155.6% */
-  color: #b1b0ac;
-}
 
 .H1 {
   width: 85%;
@@ -209,17 +188,9 @@ background: #261d18;
   font-style: normal;
   font-weight: 400;
   line-height: 90px; /* 115.385% */
-  margin-left: 0px;
+  margin-left: initial;
 }
-.H1dark {
-  width: 85%;
-  color: #b1b0ac;
-  font-family: Roboto;
-  font-size: 78px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 90px; /* 115.385% */
-}
+
 .button1 {
   width: 310px;
   height: 59px;
