--- a/NotAuthorized/whoIsTarls.css
+++ b/NotAuthorized/whoIsTarls.css
@@ -1,68 +1,122 @@
 * {
-    margin: 0 auto;
-    padding: 0;
-  }
-  .link {
-    text-decoration: none;
-    list-style: none;
-    color: black;
-    cursor: none;
-    color: #000;
-    font-family: "DM Sans";
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 12.802px; /* 80.01% */
-    text-transform: uppercase;
-  }
-  .li {
-    list-style-type: none;
-  }
-  .header {
-    width: 96.7%;
-    height: 70px;
-    background: #f5ede7;
-    display: flex;
-    align-items: flex-end;
-    padding: 16px 24px;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 16px;
-    position: relative;
-  }
-  
-  .navigation {
-    width: auto;
-    height: 14px;
-    display: flex;
-    align-items: flex-end;
-    flex-direction: row;
-    justify-content: flex-start;
-    gap: 16px;
-    visibility: visible;
-  }
-  .body {
-    max-width: 1440px;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    background: #f5ede7;
-  }
-  .section3{
-    width: 90%;
-    height: auto;
-    background: #e7d2c3d3;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
-    padding: 30px ;
-  }
-  .div3{
-    width: auto;
+  margin: 0 auto;
+  padding: 0;
+}
+.link {
+  text-decoration: none;
+  list-style: none;
+  color: black;
+  cursor: none;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12.802px; /* 80.01% */
+  text-transform: uppercase;
+}
+.li {
+  list-style-type: none;
+}
+.header {
+  width: 96.7%;
+  height: 70px;
+  background: #f5ede7;
+  display: flex;
+  align-items: flex-end;
+  padding: 16px 24px;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 16px;
+  position: relative;
+}
+
+.navigation {
+  width: auto;
+  height: 14px;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 16px;
+  visibility: visible;
+}
+.body {
+  max-width: 1440px;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  background: #f5ede7;
+}
+.section1 {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px 0px;
+}
+.div1 {
+  width: 50%;
+  height: auto;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.section2 {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px;
+  gap: 29px;
+  margin-bottom: 40px;
+}
+.div2 {
+  width: 90%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
+  justify-content: space-around;
+}
+.p2 {
+  max-width: 350px;
+  height: auto;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
+}
+.section3 {
+  width: 90%;
+  height: auto;
+
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  flex-direction: row;
+
+  padding: 30px;
+}
+.h1 {
+  width: 90%;
+  background: #ecdcd16a;
+}
+.div3 {
+  width: auto;
   min-height: 463px;
   padding: 25px;
   border-radius: 20px;
@@ -73,8 +127,45 @@
   gap: 15px;
   flex-direction: column;
   margin: 15px 0px;
-  }
-  .p3{
-    max-width: 250px;
-    height: auto;
-      }
+}
+.p3 {
+  max-width: 250px;
+  height: auto;
+}
+.footer {
+  width: 98%;
+  height: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  gap: 170px;
+  padding: 105px 17px 0px 15px;
+  flex-wrap: wrap;
+  margin-bottom: 50px;
+}
+.divFooter {
+  width: 70%;
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-direction: row;
+  flex: wrap;
+}
+.Hf {
+  color: #000;
+  font-family: Roboto;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36.018px; /* 163.72% */
+}
+.PF {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
+}
