--- a/NotAuthorized/whoIsTarls.css
+++ b/NotAuthorized/whoIsTarls.css
@@ -56,7 +56,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   padding: 20px 0px;
 }
@@ -94,7 +94,7 @@
   height: auto;
   color: #000;
   font-family: "DM Sans";
-  font-size: 14px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
   line-height: 24.003px; /* 150.019% */
@@ -109,11 +109,18 @@
   flex-wrap: wrap;
   flex-direction: row;
 
-  padding: 30px;
+  padding: 20px;
 }
 .h1 {
   width: 90%;
   background: #ecdcd16a;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
 }
 .div3 {
   width: auto;
@@ -131,6 +138,13 @@
 .p3 {
   max-width: 250px;
   height: auto;
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
 }
 .footer {
   width: 98%;
@@ -146,12 +160,15 @@
 }
 .divFooter {
   width: 70%;
+  height: auto;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
   flex-direction: row;
-  flex: wrap;
+  flex-wrap: wrap;
+  gap: 15px 20px;
 }
+
 .Hf {
   color: #000;
   font-family: Roboto;
@@ -168,4 +185,130 @@
   font-weight: 400;
   line-height: 24.003px; /* 150.019% */
   text-transform: uppercase;
+}
+
+.PF a {
+  text-decoration: none;
+}
+
+.PF ul {
+  list-style-type: none;
+  padding-left: 0; 
+  color: #000;
+}
+.hamburger-menu {
+  visibility: hidden;
+}
+
+/* скрываем чекбокс */
+#menu__toggle {
+  opacity: 0;
+}
+/* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center; /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+.menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+/* контейнер меню */
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  right: -100%;
+  /*left: -100%;*/
+  width: 250px;
+  height: 25%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #fcf2e9;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #cfd8dc;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
+@media screen and (max-width: 900px) {
+  .hamburger-menu {
+    visibility: visible;
+  }
+  .navigation {
+    display: none;
+    justify-content: flex-end;
+  }
+  
+}
+@media screen and (max-width: 725px) {
+  .img{
+    display: none;
+  }
+  .footer{
+    gap: 40px;
+  }
+}
+@media screen and (max-width: 590px) {
+  .section1{
+flex-direction:column;
+  }
+  .div1{
+    width: 90%;
+  }
+}
+@media screen and (max-width: 340px) {
+  .section3{
+    padding: 5px;
+    justify-content: center;
+  }
 }
