--- a/Tarla/aboutUs.css
+++ b/Tarla/aboutUs.css
@@ -1,14 +1,99 @@
 * {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
 }
 .body {
   max-width: 1440px;
   display: flex;
+  justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
   background: #f5ede7;
+}
+.hamburger-menu {
+  visibility: hidden;
+}
+
+/* скрываем чекбокс */
+#menu__toggle {
+  opacity: 0;
+}
+/* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center; /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+.menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+/* контейнер меню */
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  right: -100%;
+  /*left: -100%;*/
+  width: 250px;
+  height: 12%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #fcf2e9;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #cfd8dc;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
 }
 .link {
   text-decoration: none;
@@ -37,7 +122,8 @@
 .header {
   width: 96.7%;
   height: 70px;
-  background: #f5ede7;
+   background: #f6ddcadc;
+
   display: flex;
   align-items: flex-end;
   padding: 16px 24px;
@@ -45,6 +131,66 @@
   justify-content: flex-start;
   gap: 16px;
   position: relative;
+}
+.map {
+  width: 90%;
+  height: auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: row;
+  gap: 70px;
+  padding: 55px;
+  flex-wrap: wrap;
+   background: #f6ddcadc;
+}
+.unvisibleImg {
+  display: none;
+}
+.textH1 {
+  color: #000;
+  font-family: "DM Sans";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
+  margin-left: initial;
+}
+.section1 {
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 40px 0px;
+}
+.div1 {
+  width: 40%;
+  height: auto;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+}
+.ul1 {
+  width: 40%;
+  height: auto;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  color: #000;
+  font-family: Roboto;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 40.005px; /* 153.865% */
 }
 
 .navigation {
@@ -77,6 +223,91 @@
   justify-content: center;
   flex-wrap: wrap;
 }
+
+.hamburger-menu {
+  visibility: hidden;
+}
+
+/* скрываем чекбокс */
+#menu__toggle {
+  opacity: 0;
+}
+/* стилизуем кнопку */
+.menu__btn {
+  display: flex; /* используем flex для центрирования содержимого */
+  align-items: center; /* центрируем содержимое кнопки */
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+/* добавляем "гамбургер" */
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #000000;
+}
+.menu__btn > span::before {
+  content: "";
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: "";
+  top: 8px;
+}
+/* контейнер меню */
+.menu__box {
+  display: block;
+  position: fixed;
+  visibility: hidden;
+  top: 0;
+  right: -100%;
+  /*left: -100%;*/
+  width: 250px;
+  height: 15%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  text-align: center;
+  background-color: #fcf2e9;
+  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+}
+/* элементы меню */
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+}
+.menu__item:hover {
+  background-color: #cfd8dc;
+}
+
+#menu__toggle:checked ~ .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked ~ .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0);
+}
+#menu__toggle:checked ~ .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  visibility: visible;
+  left: 0;
+}
 .paragraph,
 .paragraph2 {
   width: 75%;
@@ -96,58 +327,75 @@
 }
 .textP {
   color: #000;
-  font-family: Roboto;
-  font-size: 26px;
+  font-family: "DM Sans";
+  font-size: 13px;
   font-style: normal;
   font-weight: 400;
-  line-height: 40.005px; /* 153.865% */
+  line-height: 24.003px; /* 150.019% */
+  text-transform: uppercase;
 }
 
-.textH1 {
-  color: #000;
-  font-family: "DM Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.003px; /* 150.019% */
-  text-transform: uppercase;
-}
-.footer {
-  width: 98%;
+.aboutTarla{
+  width: 100%;
   height: auto;
+  background: #f6ddcadc;
+  margin: 40px 0px 20px 0px;
+gap: 20px;
+  padding: 20px ;
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+   align-items:flex-start;
+   justify-content: flex-start;
+}
+.textAboutTarla{
+  width: 75%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+   flex-direction: column;
+   flex-wrap: wrap;
+   align-items:flex-start;
+   justify-content: flex-start;
+}
+.footer{
+  width: 100%;
+  height: auto;
+  padding:70px 0px 60px 0px;
+  display: flex;
   flex-direction: column;
-  /* gap: 170px;*/
-  padding: 105px 17px 0px 15px;
-  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+    }
+    .icon{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 200px;
+      justify-content: center;
+      align-items:center;
+     gap: 10px;
+    }
+    .divfooter {
+      width: 60%;
+      height: auto;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+    
+    }
+ @media screen and (max-width: 900px) {
+      .hamburger-menu {
+        visibility: visible;
+      }
+      .navigation {
+        display: none;
+      }
 }
-.divFooter {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-.Hf {
-  color: #000;
-  font-family: Roboto;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 36.018px; /* 163.72% */
-}
-.PF {
-  color: #000;
-  font-family: "DM Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.003px; /* 150.019% */
-  text-transform: uppercase;
+ @media screen and (max-width: 1400px) {
+      .fone{
+        display: none;
+      }
 }
 @media screen and (max-width: 1160px) {
   .paragraph {
@@ -162,9 +410,4 @@
     object-fit: contain;
   }
 }
-/*@media screen and (max-width: 980px){
- .divFooter{
-  flex-direction: column;
-  flex-wrap: wrap;
- }
-}*/
+
