--- a/NotAuthorized/style.css
+++ b/NotAuthorized/style.css
@@ -610,7 +610,7 @@ background: #261d18;
     gap: 70px;
   }
   .line {
-    width: 1440px;
+    width: 100%;
     height: 1px;
     flex-shrink: 0;
     background: #000;
@@ -665,42 +665,7 @@ background: #261d18;
     line-height: 72px; /* 423.529% */
     text-transform: uppercase;
   }
-  .footer {
-    width: 98%;
-    height: auto;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-direction: row;
-    gap: 170px;
-    padding: 105px 17px 0px 15px;
-    flex-wrap: wrap;
-  }
-  .divFooter {
-    width: 70%;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: row;
-    flex: wrap;
-  }
-  .Hf {
-    color: #000;
-    font-family: Roboto;
-    font-size: 22px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 36.018px; /* 163.72% */
-  }
-  .PF {
-    color: #000;
-    font-family: "DM Sans";
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 24.003px; /* 150.019% */
-    text-transform: uppercase;
-  }
+    
   /* скрываем чекбокс */
   #menu__toggle {
     opacity: 0;
@@ -783,4 +748,32 @@ background: #261d18;
     border: none;
     background: none;
   }
-  
+  .footer{
+    width: 100%;
+    height: auto;
+    padding:70px 0px 60px 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+      }
+      .icon{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 200px;
+        justify-content: center;
+        align-items:center;
+       gap: 10px;
+      }
+      .divfooter {
+        width: 60%;
+        height: auto;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+      
+      }
+       
