feat: made adaptive main authorized page

--- a/Tarla/mediaStyle.css
+++ b/Tarla/mediaStyle.css
@@ -6,6 +6,12 @@
     visibility: hidden;
   }
 }
+@media screen and (max-width: 960px) {
+  .section3 {
+    justify-content: center;
+    align-items: center;
+  }
+}
 @media screen and (max-width: 1412px) {
   .img1 {
     display: none;
@@ -17,19 +23,15 @@
   }
 }
 @media screen and (max-width: 930px) {
-  .visible4 {
-    display: none;
-  }
-  .visible5 {
-    display: none;
-  }
-  .visible6 {
-    display: none;
-  }
-}
-@media screen and (max-width: 769px) {
   .button4unvisible {
     display: block;
+  }
+  .section4 {
+    width: 98%;
+    flex-direction: column;
+  }
+  .visible {
+    display: none;
   }
 }
 @media screen and (max-width: 1107px) {
@@ -41,5 +43,66 @@
   }
   .img3UnVisible {
     display: block;
+  }
+}
+@media screen and (max-width: 740px) {
+  .img3 {
+    display: none;
+  }
+  .div3 {
+    width: 80%;
+  }
+  .img3UnVisible {
+    display: none;
+  }
+  .H2_2 {
+    width: 80%;
+  }
+  .p2_2 {
+    width: 80%;
+  }
+  .button2 {
+    width: 70%;
+  }
+  .section2 {
+    width: 93%;
+  }
+  .p6_1 {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .navigation {
+    display: none;
+  }
+  .section1 {
+    width: 85%;
+  }
+  .button1 {
+    width: 70%;
+  }
+  .header {
+    width: 85%;
+  }
+  .button8 {
+    width: 80%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .logo {
+    display: none;
+  }
+  .img4 {
+    display: none;
+  }
+  .div6 {
+    height: auto;
+    padding: 5px;
+  }
+  .section6 {
+    width: 95%;
+  }
+  .img6 {
+    display: none;
   }
 }
