--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -170,6 +170,8 @@ background: #261d18;
   gap: 48px;
 }
 .div1 {
+  max-width: 568px;
+  height: auto;
   display: flex;
   align-items: flex-start;
   padding: 77px 18px 45px 0px;
@@ -179,7 +181,7 @@ background: #261d18;
 }
 
 .P1 {
-  width: 444px;
+  max-width: 444px;
   height: auto;
   margin-top: 10px;
   color: #000;
@@ -190,7 +192,7 @@ background: #261d18;
   line-height: 28.008px; /* 155.6% */
 }
 .P1dark {
-  width: 444px;
+  max-width: 444px;
   height: auto;
   margin-top: 10px;
   font-family: "Roboto";
@@ -236,7 +238,7 @@ background: #261d18;
   margin-left: 20px;
 }
 .section2 {
-  width: 97.8%;
+  width: 98%;
   height: auto;
   background: #f5ede7;
   padding: 80px 16px;
@@ -554,7 +556,7 @@ background: #261d18;
   gap: 70px;
 }
 .line {
-  width: 1440px;
+  width:100%;
   height: 1px;
   flex-shrink: 0;
   background: #000;
@@ -609,117 +611,32 @@ background: #261d18;
   line-height: 72px; /* 423.529% */
   text-transform: uppercase;
 }
-.footer {
-  width: 98%;
-  height: auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-direction: row;
-  gap: 170px;
-  padding: 105px 17px 0px 15px;
-  flex-wrap: wrap;
-}
-.divFooter {
-  width: 70%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-direction: row;
-  flex: wrap;
-}
-.Hf {
-  color: #000;
-  font-family: Roboto;
-  font-size: 22px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 36.018px; /* 163.72% */
-}
-.PF {
-  color: #000;
-  font-family: "DM Sans";
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 24.003px; /* 150.019% */
-  text-transform: uppercase;
-}
-/* скрываем чекбокс */
-#menu__toggle {
-  opacity: 0;
-}
-/* стилизуем кнопку */
-.menu__btn {
-  display: flex; /* используем flex для центрирования содержимого */
-  align-items: center; /* центрируем содержимое кнопки */
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  width: 26px;
-  height: 26px;
-  cursor: pointer;
-  z-index: 1;
-}
-/* добавляем "гамбургер" */
-.menu__btn > span,
-.menu__btn > span::before,
-.menu__btn > span::after {
-  display: block;
-  position: absolute;
+.footer{
   width: 100%;
-  height: 2px;
-  background-color: #1e1814;
-}
-.menu__btn > span::before {
-  content: "";
-  top: -8px;
-}
-.menu__btn > span::after {
-  content: "";
-  top: 8px;
-}
-/* контейнер меню */
-.menu__box {
-  display: block;
-  position: fixed;
-  visibility: hidden;
-  top: 0;
-  left: -100%;
-  width: 230px;
-  height: 10%;
-  margin: 0;
-  padding: 80px 0;
-  list-style: none;
-  text-align: center;
-  background-color: #f5ede7;
-  box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
-}
-/* элементы меню */
-.menu__item {
-  display: block;
-  padding: 12px 24px;
-  color: #333;
-  font-family: "Roboto", sans-serif;
-  font-size: 20px;
-  font-weight: 600;
-  text-decoration: none;
-}
-.menu__item:hover {
-  background-color: #f5ede7;
-}
-#menu__toggle:checked ~ .menu__btn > span {
-  transform: rotate(45deg);
-}
-#menu__toggle:checked ~ .menu__btn > span::before {
-  top: 0;
-  transform: rotate(0);
-}
-#menu__toggle:checked ~ .menu__btn > span::after {
-  top: 0;
-  transform: rotate(90deg);
-}
-#menu__toggle:checked ~ .menu__box {
-  visibility: visible;
-  left: 0;
-}
+  height: auto;
+  padding:70px 0px 60px 0px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 30px;
+    }
+    .icon{
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 200px;
+      justify-content: center;
+      align-items:center;
+     gap: 10px;
+    }
+    .divfooter {
+      width: 60%;
+      height: auto;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+    
+    }
+
