--- a/Tarla/style.css
+++ b/Tarla/style.css
@@ -5,9 +5,7 @@
 .link {
   text-decoration: none;
   list-style: none;
-  color: black;
   cursor: none;
-  color: #000;
   font-family: "DM Sans";
   font-size: 16px;
   font-style: normal;
@@ -26,14 +24,64 @@
   flex-wrap: wrap;
   justify-content: center;
 }
-.dayMode{
-background: #f5ede7;
-  color: #000;
+
+.theme-element.dayMode {
+  background: #f5ede7 !important;
+  color: #000 !important;
 }
-.nightMode{
-background: #261d18;
- color: #725d49;
+
+.theme-element.nightMode {
+  background: #261d18 !important;
+  color: #725d49 !important;
 }
+
+.theme-specialElement.nightMode {
+  background: #16110e !important;
+  color: #725d49 !important;
+}
+
+.theme-specialElement.dayMode {
+  background: #ffc3a0 !important;
+  color: #000 !important;
+}
+
+.theme-button.dayMode {
+  border: 1px solid #000 !important;
+}
+
+.theme-button.nightMode {
+  border: 1px solid #725d49 !important;
+  color: #725d49; 
+}
+
+.theme-blueButton.dayMode {
+  border: 1px solid #0126de !important;
+  color: #0126de !important;
+}
+
+.theme-blueButton.nightMode {
+  border: 1px solid #5f74e2 !important;
+  color: #5f74e2 !important;
+  background:  #16110e !important;
+}
+ .switchers{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction:row;
+  gap: 5px;
+ }
+ .changeButton{
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 17px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 34.002px; /* 154.553% */
+  border-radius: 15px;
+ }
 .header {
   width: 96.7%;
   height: 70px;
@@ -59,9 +107,8 @@ background: #261d18;
 }
 
 .logIn{
-  width: 45px;
-  height: 30px;
-  margin-bottom: 30px;
+  width: 405px;
+  height: 40px;
 }
 .hamburger-menu {
   visibility: hidden;
@@ -158,17 +205,7 @@ background: #261d18;
   justify-content: center;
   gap: 48px;
 }
-.section1dark {
-  width: 96.4%;
-  height: auto;
-  background: #261d18;
-  display: flex;
-  align-items: center;
-  padding: 24px 26px;
-  flex-direction: row;
-  justify-content: center;
-  gap: 48px;
-}
+
 .div1 {
   max-width: 568px;
   height: auto;
@@ -184,28 +221,16 @@ background: #261d18;
   max-width: 444px;
   height: auto;
   margin-top: 10px;
-  color: #000;
   font-family: "Roboto";
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: 28.008px; /* 155.6% */
 }
-.P1dark {
-  max-width: 444px;
-  height: auto;
-  margin-top: 10px;
-  font-family: "Roboto";
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 28.008px; /* 155.6% */
-  color: #b1b0ac;
-}
+
 
 .H1 {
   width: 85%;
-  color: #000;
   font-family: Roboto;
   font-size: 78px;
   font-style: normal;
@@ -213,19 +238,10 @@ background: #261d18;
   font-weight: 400;
   line-height: 90px; /* 115.385% */
 }
-.H1dark {
-  width: 85%;
-  color: #b1b0ac;
-  font-family: Roboto;
-  font-size: 78px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 90px; /* 115.385% */
-}
+
 .button1 {
   width: 310px;
   height: 59px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -233,7 +249,6 @@ background: #261d18;
   font-weight: 400;
   line-height: 34.002px; /* 154.553% */
   border-radius: 35px;
-  border: 1px solid #000;
   background: none;
   margin-left: 20px;
 }
@@ -250,7 +265,6 @@ background: #261d18;
 }
 .p2 {
   width: 250px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 43px;
@@ -279,7 +293,6 @@ background: #261d18;
 }
 .H2 {
   width: 117px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 27px;
@@ -290,7 +303,6 @@ background: #261d18;
 }
 .H2_2 {
   width: 200px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 27px;
@@ -301,7 +313,6 @@ background: #261d18;
 }
 .p2_2 {
   width: 320px;
-  color: #000;
   text-align: center;
   font-family: "DM Sans";
   font-size: 18px;
@@ -312,7 +323,6 @@ background: #261d18;
 .button2 {
   width: 310px;
   height: 59px;
-  color: #0126de;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -320,7 +330,7 @@ background: #261d18;
   font-weight: 400;
   line-height: 34.002px; /* 154.553% */
   border-radius: 35px;
-  border: 1px solid #0126de;
+ 
   background: none;
 }
 .section3 {
@@ -358,7 +368,6 @@ background: #261d18;
   gap: 23px;
 }
 .p3 {
-  color: #000;
   font-family: Roboto;
   font-size: 40px;
   font-style: normal;
@@ -389,7 +398,6 @@ background: #261d18;
 }
 .p4_2 {
   width: 200px;
-  color: #000;
   margin-top: 10px;
   font-family: Roboto;
   font-size: 27px;
@@ -400,7 +408,6 @@ background: #261d18;
   margin-left: 0px;
 }
 .p4_3 {
-  color: #000;
   font-family: "DM Sans";
   font-size: 20px;
   font-style: normal;
@@ -413,8 +420,6 @@ background: #261d18;
   height: 58px;
   flex-shrink: 0;
   border-radius: 35px;
-  border: 1px solid #0126de;
-  color: #0126de;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -426,7 +431,6 @@ background: #261d18;
   display: none;
   width: 310px;
   height: 59px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -439,7 +443,6 @@ background: #261d18;
   margin-top: 40px;
 }
 .H4 {
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 39px;
@@ -482,7 +485,6 @@ background: #261d18;
 }
 .p6_1 {
   width: 360px;
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 55px;
@@ -492,7 +494,6 @@ background: #261d18;
 }
 .p6_2 {
   max-width: 390px;
-  color: #000;
   text-align: center;
   font-family: "DM Sans";
   font-size: 20px;
@@ -502,7 +503,6 @@ background: #261d18;
 }
 .p6_3 {
   max-width: 400px;
-  color: #000;
   text-align: center;
   font-family: "DM Sans";
   font-size: 20px;
@@ -535,7 +535,6 @@ background: #261d18;
 .button7_2 {
   width: 95px;
   height: 58px;
-  color: #0126de;
   text-align: center;
   font-family: Roboto;
   font-size: 22px;
@@ -543,7 +542,6 @@ background: #261d18;
   font-weight: 400;
   line-height: 34.002px;
   border-radius: 35px;
-  border: 1px solid #0126de;
   background: none;
 }
 .B {
@@ -574,7 +572,6 @@ background: #261d18;
 }
 
 .H8 {
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 50px;
@@ -584,7 +581,6 @@ background: #261d18;
   text-transform: uppercase;
 }
 .p8 {
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 31px;
@@ -602,7 +598,6 @@ background: #261d18;
   border-radius: 10px;
   border: 1px solid #000;
   background: rgba(255, 255, 255, 0.25);
-  color: #000;
   text-align: center;
   font-family: Roboto;
   font-size: 17px;
