--- a/Tarla/swaper.css
+++ b/Tarla/swaper.css
@@ -1,14 +1,10 @@
-/*.arrows {
-  position: absolute;
-  left: 90%;
-  bottom: 35px;
-}*/
+
 .img1 {
   width: 898px;
   height: 564px;
   flex-shrink: 0;
   border-radius: 20px;
-  position: relative;
+ /*position: relative;*/
 }
 .swiper-slide {
   text-align: center;
