fix: fixed link for buttom and style for them

--- a/changeColor.css
+++ b/changeColor.css
@@ -25,7 +25,7 @@
   }
   
   .theme-specialElement.dayMode {
-    background: #fcd8c2e5 !important;
+    background:  #ffc3a0 !important;
     color: #000 !important;
   }
   
