--- a/NotAuthorized/style.css
+++ b/NotAuthorized/style.css
@@ -20,24 +20,12 @@
 .body {
   max-width: 1440px;
   display: flex;
+  margin-top: 80px;
   align-items: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
 }
-.header {
-  width: 96.7%;
-  height: 70px;
-  background: #f5ede7;
-  display: flex;
-  align-items: flex-end;
-  padding: 16px 24px;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 16px;
-  position: relative;
-}
-
 .navigation {
   width: auto;
   height: 14px;
