--- a/Tarla/catalog.css
+++ b/Tarla/catalog.css
@@ -22,22 +22,11 @@
   align-items: flex-start;
   flex-direction: column;
   flex-wrap: wrap;
+  margin-top: 80px;
   justify-content: center;
   background: #f5ede7;
 }
 
-.header {
-  width: 96%;
-  height: 70px;
-  background: #f6ddcadc;
-  display: flex;
-  align-items: flex-end;
-  padding: 16px;
-  flex-direction: row;
-  justify-content: flex-start;
-  gap: 16px;
-  position: relative;
-}
 
 .navigation {
   width: auto;
